# PersonalVoiceAssistant

./: .gitignore  CMakeLists.txt  README.md  config.json
deepspeech/native_client/: README.md  deepspeech.cc  deepspeech.h  generate_trie.cpp  trie_load.cc
deepspeech/native_client/ctcdecode/: swigwrapper.i
deepspeech/native_client/kenlm/: CMakeLists.txt
include/ConversationManager/: ConversationManager.hpp  InputListener.hpp
include/SkillManager/: Skill.hpp  SkillManager.hpp
include/SpeechManager/: EvalAudioChunk.hpp  OutputListener.hpp  SpeechListener.hpp  SpeechListenerConsoleMock.hpp  SpeechManager.hpp  SpeechModelManager.hpp
include/Utils/: BlockingQueue.hpp  Config.hpp  ExclusiveStack.hpp  Mean.hpp  Utils.hpp
src/: main.cpp
src/ConversationManager/: ConversationManager.cpp  InputListener.cpp
src/SkillManager/: SkillManager.cpp
src/SpeechManager/: OutputListener.cpp  SpeechListener.cpp  SpeechListenerConsoleMock.cpp  SpeechManager.cpp  SpeechModelManager.cpp
src/Utils/: Config.cpp
